welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int(21)
 required: Boolean
  if ((talking==true) && (6<hour<21)){
                                 ^